--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -3,13 +3,131 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <LangVersion>latest</LangVersion>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <AnalysisLevel>latest</AnalysisLevel>
+    <EnforceCodeStyleInBuild>true</EnforceCodeStyleInBuild>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>
   </PropertyGroup>
 
+  <!-- Build configurations -->
+  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <DebugSymbols>true</DebugSymbols>
+  </PropertyGroup>
+
+  <PropertyGroup Condition="'$(Configuration)' == 'Release'">
+    <DefineConstants>RELEASE;TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+  </PropertyGroup>
+
+  <!-- Package versions -->
+  <PropertyGroup>
+    <!-- Core packages -->
+    <MediatRVersion>12.2.0</MediatRVersion>
+    <MediatRContractsVersion>2.0.1</MediatRContractsVersion>
+    <FluentValidationVersion>11.8.1</FluentValidationVersion>
+    <ErrorOrVersion>1.3.0</ErrorOrVersion>
+    <NodaTimeVersion>3.1.9</NodaTimeVersion>
+    <MicrosoftExtensionsVersion>8.0.0</MicrosoftExtensionsVersion>
+    
+    <!-- API packages -->
+    <AspNetCoreOpenApiVersion>8.0.0</AspNetCoreOpenApiVersion>
+    <SwaggerVersion>6.5.0</SwaggerVersion>
+    <SwaggerAnnotationsVersion>6.5.0</SwaggerAnnotationsVersion>
+    <AspNetCoreAuthenticationJwtBearerVersion>8.0.0</AspNetCoreAuthenticationJwtBearerVersion>
+    <AspNetCoreAuthenticationGoogleVersion>8.0.0</AspNetCoreAuthenticationGoogleVersion>
+    
+    <!-- Test packages -->
+    <xUnitVersion>2.6.3</xUnitVersion>
+    <xUnitRunnerVersion>2.6.3</xUnitRunnerVersion>
+    <MoqVersion>4.20.70</MoqVersion>
+    <FluentAssertionsVersion>6.12.0</FluentAssertionsVersion>
+    <TestContainersVersion>3.6.0</TestContainersVersion>
+    <BogusVersion>35.0.1</BogusVersion>
+    <CoverletVersion>6.0.0</CoverletVersion>
+    
+    <!-- Analysis packages -->
+    <StyleCopAnalyzersVersion>1.2.0-beta.507</StyleCopAnalyzersVersion>
+    <SonarAnalyzerVersion>9.15.0.81779</SonarAnalyzerVersion>
+  </PropertyGroup>
+
+  <!-- Common packages for all projects -->
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="8.0.0" />
+    <!-- Microsoft Extensions -->
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="$(MicrosoftExtensionsVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="$(MicrosoftExtensionsVersion)" />
+    
+    <!-- Code Analysis -->
+    <PackageReference Include="StyleCop.Analyzers" Version="$(StyleCopAnalyzersVersion)">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="SonarAnalyzer.CSharp" Version="$(SonarAnalyzerVersion)">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
-</Project> 
+
+  <!-- Domain layer packages -->
+  <ItemGroup Condition="$(MSBuildProjectName.EndsWith('Domain'))">
+    <!-- Event-driven and messaging -->
+    <PackageReference Include="MediatR" Version="$(MediatRVersion)" />
+    <PackageReference Include="MediatR.Contracts" Version="$(MediatRContractsVersion)" />
+    
+    <!-- Validation and error handling -->
+    <PackageReference Include="ErrorOr" Version="$(ErrorOrVersion)" />
+    <PackageReference Include="FluentValidation" Version="$(FluentValidationVersion)" />
+    
+    <!-- Time handling -->
+    <PackageReference Include="NodaTime" Version="$(NodaTimeVersion)" />
+  </ItemGroup>
+
+  <!-- Test project packages -->
+  <ItemGroup Condition="$(MSBuildProjectName.EndsWith('Tests'))">
+    <!-- Testing frameworks -->
+    <PackageReference Include="xunit" Version="$(xUnitVersion)" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="$(xUnitRunnerVersion)">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    
+    <!-- Testing tools -->
+    <PackageReference Include="Moq" Version="$(MoqVersion)" />
+    <PackageReference Include="FluentAssertions" Version="$(FluentAssertionsVersion)" />
+    <PackageReference Include="Bogus" Version="$(BogusVersion)" />
+    <PackageReference Include="coverlet.collector" Version="$(CoverletVersion)">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    
+    <!-- Integration testing -->
+    <PackageReference Include="Testcontainers" Version="$(TestContainersVersion)" 
+                      Condition="$(MSBuildProjectName.Contains('Integration'))" />
+  </ItemGroup>
+
+  <!-- Application layer packages -->
+  <ItemGroup Condition="$(MSBuildProjectName.EndsWith('Application'))">
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="$(FluentValidationVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="$(MicrosoftExtensionsVersion)" />
+  </ItemGroup>
+
+  <!-- Infrastructure layer packages -->
+  <ItemGroup Condition="$(MSBuildProjectName.EndsWith('Infrastructure'))">
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="$(MicrosoftExtensionsVersion)" />
+    <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="$(MicrosoftExtensionsVersion)" />
+  </ItemGroup>
+
+  <!-- API layer packages -->
+  <ItemGroup Condition="$(MSBuildProjectName.EndsWith('Api'))">
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="$(AspNetCoreOpenApiVersion)" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="$(SwaggerVersion)" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="$(SwaggerAnnotationsVersion)" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="$(AspNetCoreAuthenticationJwtBearerVersion)" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.Google" Version="$(AspNetCoreAuthenticationGoogleVersion)" />
+  </ItemGroup>
+</Project>
