--- a/src/Core/DataMigration.Domain/DataMigration.Domain.csproj
+++ b/src/Core/DataMigration.Domain/DataMigration.Domain.csproj
@@ -1,9 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591;1573;8604;8603</NoWarn>
   </PropertyGroup>
 
 </Project>
