--- a/src/Core/DataMigration.Infrastructure/DataMigration.Infrastructure.csproj
+++ b/src/Core/DataMigration.Infrastructure/DataMigration.Infrastructure.csproj
@@ -1,9 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591;1573</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataMigration.Application\DataMigration.Application.csproj" />
+  </ItemGroup>
 
 </Project>
