--- a/src/Presentation/DataMigration.Admin/DataMigration.Admin.csproj
+++ b/src/Presentation/DataMigration.Admin/DataMigration.Admin.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
-    <Nullable>enable</Nullable>
-    <ImplicitUsings>enable</ImplicitUsings>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <NoWarn>$(NoWarn);1591;1573</NoWarn>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\DataMigration.Infrastructure\DataMigration.Infrastructure.csproj" />
+  </ItemGroup>
 
 </Project>
