--- a/src/Features/DataMigration.UserManagement/DataMigration.UserManagement.csproj
+++ b/src/Features/DataMigration.UserManagement/DataMigration.UserManagement.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\Core\DataMigration.Domain\DataMigration.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
